<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chapter13</string>
    <string name="app_title1">通知を表示したい</string>
    <string name="app_title2">展開可能な通知を表示したい</string>
    <string name="app_title3">アプリのインストールと削除を検出したい</string>
    <string name="app_title4">端末の起動を検出したい</string>
    <string name="app_title5">ロック解除を検出したい</string>
    <string name="app_title6">電話の着信を検出したい</string>
    <string name="app_title7">バッテリーの状態を検出したい</string>
    <string name="app_title8">WiFiステータスバーに通知を表示したい</string>
    <string name="app_title9">ディスプレイのON/OFFを検出したい</string>
    <string name="app_title10">GCMを使いたい</string>
    <string name="app_title11">Toastを表示したい</string>
    <string name="app_title12">Toastの表示をカスタマイズしたい</string>
    <string name="action_settings">Settings</string>
    <string name="url_shoeisha">http://www.shoeisha.co.jp</string>
    <string name="label_status_ticker">ステータス通知を開始</string>
    <string name="label_launch_browser">ブラウザを起動</string>
    <string name="label_status_style">通知スタイル</string>
    <string name="label_status_main">メイン表示</string>
    <string name="label_status_summary">サマリー表示</string>
    <string name="label_status_showline1">1行目表示</string>
    <string name="label_status_showline2">2行目表示</string>
    <string name="label_status_showline3">3行目表示</string>
    <string name="label_status_showline4">4行目表示</string>
    <string name="label_status_showlinemore">まだまだあります</string>
    <string name="label_status_button_call">電話</string>
    <string name="label_status_button_sms">SMS</string>
    <string name="label_detect_installapp">アプリのインストールを検知</string>
    <string name="label_detect_uninstallapp">アプリのアンインストールを検知</string>
    <string name="label_detect_reboot">デバイスを再起動してみてください</string>
    <string name="label_detect_boot_completed">デバイスの起動を検知して起動しました</string>
    <string name="label_detect_unlock">デバイスをロックしてから解除してみてください</string>
    <string name="label_detect_unlocked">ロックを解除しました</string>
    <string name="label_detect_callphone">電話を着信してみてください</string>
    <string name="label_detect_calling">%sから着信です</string>
    <string name="label_detect_talking">%sと通話中です</string>
    <string name="label_detect_charging">充電中</string>
    <string name="label_detect_discharging">放電中</string>
    <string name="label_detect_fullbattery">満タン</string>
    <string name="label_detect_status_unknown">Status Unknown</string>
    <string name="label_detect_good">GOOD</string>
    <string name="label_detect_overheart">OVERHEART</string>
    <string name="label_detect_overvoltage">OVER VOLTAGE</string>
    <string name="label_detect_dead">DEAD</string>
    <string name="label_detect_unspecifiedfailure">UNSPECIFIED_FAILURE</string>
    <string name="label_detect_cold">COLD</string>
    <string name="label_detect_unknown">UNKNOWN</string>
    <string name="label_detect_temperature">%s℃</string>
    <string name="label_detect_voltage">電圧%sV</string>
    <string name="label_detect_ac">AC</string>
    <string name="label_detect_usb">USB</string>
    <string name="label_detect_wireless">ワイヤレス</string>
    <string name="label_detect_disconnect">未接続</string>
    <string name="label_detect_wifistate">Wi-Fiの状態 :%s</string>
    <string name="label_detect_wifistate_disable_now">無効にしています…</string>
    <string name="label_detect_wifistate_disable">無効</string>
    <string name="label_detect_wifistate_enable_now">有効にしています…</string>
    <string name="label_detect_wifistate_enable">有効</string>
    <string name="label_detect_wifistate_unknown">不明</string>
    <string name="label_detect_screen">ディスプレイのON/OFFさせてみてください</string>
    <string name="label_detect_process_empty">EMPTY</string>
    <string name="label_detect_process_foreground">FOREGROUND</string>
    <string name="label_detect_process_background">BACKGROUND</string>
    <string name="label_detect_process_perceptible">PERCEPTIBLE</string>
    <string name="label_detect_process_service">SERVICE</string>
    <string name="label_detect_process_visible">VISIBLE</string>
    <string name="label_battery_level">残量 : </string>
    <string name="label_battery_state">充電状態 : </string>
    <string name="label_battery_quality">品質 : </string>
    <string name="label_battery_temperature">温度 : </string>
    <string name="label_battery_connect">ケーブル接続 : </string>
    <string name="label_notification">通知</string>
    <string name="label_notification_bigtext">ビッグテキスト</string>
    <string name="label_notification_bigpicture">ビッグピクチャー</string>
    <string name="label_notification_inbox">インボックス</string>
    <string name="label_notification_button">ボタン表示</string>
    <string name="label_wifi">Wi-Fi</string>
    <string name="label_volume">ボリュームボタンの検知</string>
    <string name="label_unlock">デバイスのロック解除を検知</string>
    <string name="label_screen">ディスプレイのON/OFFを検知</string>
    <string name="label_process">プロセスの検知</string>
    <string name="label_bootdevice">デバイスの起動を検知</string>
    <string name="label_installapp">インストール/アンストール検知</string>
    <string name="label_callphone">電話の着信を検知</string>
    <string name="label_off">切</string>
    <string name="label_on">入</string>
    <string name="label_register">登録</string>
    <string name="label_unregister">解除</string>
    <string name="label_toastshow">トースト表示</string>

</resources>