<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_xlarge"
    android:stretchColumns="1" >

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/label_battery_level" />

        <TextView
            android:id="@+id/BatteryLevel"
            android:gravity="center" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/label_battery_state" />

        <TextView
            android:id="@+id/BatteryCharge"
            android:gravity="center" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/label_battery_quality" />

        <TextView
            android:id="@+id/BatteryQuality"
            android:gravity="center" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/label_battery_temperature" />

        <TextView
            android:id="@+id/BatteryTemperature"
            android:gravity="center" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/label_battery_connect" />

        <TextView
            android:id="@+id/BatteryConnect"
            android:gravity="center" />
    </TableRow>

</TableLayout>